resolved z-index problem

--- a/src/mainPage/styles/imageBanner.scss
+++ b/src/mainPage/styles/imageBanner.scss
@@ -30,5 +30,5 @@
 
 .image-slider {
     height: 60vh;
-    z-index: -10
+    z-index: -1
 }
